namespace Game.Constants
{
    public static class PlayerAnimationParameters
    {
        public const string SPEED       = "Speed";
        public const string INPUT_X     = "InputX";
        public const string INPUT_Y     = "InputY";
        public const string DIRECTION   = "Direction";
        public const string ATTACK      = "Attack";
    }
}